WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166399
AVPlayerLayer isn't available on every system
https://bugs.webkit.org/show_bug.cgi?id=166399
Summary
AVPlayerLayer isn't available on every system
Eric Carlson
Reported
2016-12-21 17:00:37 PST
Use SOFT_LINK_CLASS_OPTIONAL instead of SOFT_LINK_CLASS.
Attachments
Proposed patch.
(2.35 KB, patch)
2016-12-21 17:06 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-12-21 17:06:49 PST
Created
attachment 297634
[details]
Proposed patch.
Alexey Proskuryakov
Comment 2
2016-12-21 17:22:29 PST
Could you please add a radar link? The bug has the keyword, but I can't find the radar.
Eric Carlson
Comment 3
2016-12-21 17:38:30 PST
<
rdar://problem/28766009
>
Jer Noble
Comment 4
2016-12-22 08:34:18 PST
Comment on
attachment 297634
[details]
Proposed patch. r=me. Do we already null check correctly when we try to use AVPlayerLayer?
WebKit Commit Bot
Comment 5
2016-12-22 08:59:09 PST
Comment on
attachment 297634
[details]
Proposed patch. Clearing flags on attachment: 297634 Committed
r210098
: <
http://trac.webkit.org/changeset/210098
>
WebKit Commit Bot
Comment 6
2016-12-22 08:59:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug