AVPlayerLayer isn't available on every system https://bugs.webkit.org/show_bug.cgi?id=166399

Reviewed by Jer Noble.

Source/WebCore:

No new tests, prevents a crash that can't be reproduced on a test system.

* platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm: Use SOFT_LINK_CLASS_OPTIONAL.

Source/WebKit2:

* WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.mm: Use SOFT_LINK_CLASS_OPTIONAL.


Canonical link: https://commits.webkit.org/183705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210098 268f45cc-cd09-0410-ab3c-d52691b4dbfc