Source/WebKit2/WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.mm
@@ -38,7 +38,7 @@
 #import <wtf/RetainPtr.h>
 
 SOFT_LINK_FRAMEWORK_OPTIONAL(AVFoundation)
-SOFT_LINK_CLASS(AVFoundation, AVPlayerLayer)
+SOFT_LINK_CLASS_OPTIONAL(AVFoundation, AVPlayerLayer)
 
 using namespace WebCore;
 
